[package]
name = "conduit-rocket"
version = "0.1.0"
authors = ["Sylvain Leclercq <maisbiensurqueoui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = true
features = ["diesel_postgres_pool"]

