[package]
name = "conduit-rocket"
version = "0.1.0"
authors = ["Sylvain Leclercq <maisbiensurqueoui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonwebtoken = "7.1.2"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
scrypt = "0.3.0"
chrono = "0.4.0"
slug = "0.1.4"
rand = "0.7.3"
ammonia = "3.1.0"
regex = "1.3.9"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = true
features = ["diesel_postgres_pool"]

